crates/core/tests/ui/derive/fail/missing_attr.stderr
error: no default codec inference for field type `Vec < i32 >`; add #[pg(codec = "...")]
 --> tests/ui/derive/fail/missing_attr.rs:4:12
  |
4 |     names: Vec<i32>,
  |            ^^^^^^^^
